# rust-stuff

advent-of-code/aoc2022/: Cargo.toml
advent-of-code/aoc2022/src/: days.rs  main.rs
advent-of-code/aoc2022/src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
hello-web-server/src/: main.rs
ls/src/: main.rs
my-lambda/: Cargo.toml
rust-foo/: Cargo.toml
rust-foo/src/: config.rs  lib.rs
rust-foo/src/my_mod/: lib1.rs  mod.rs
