[package]
name = "rust-foo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.5"
aws-sdk-dynamodb = "1.14.0"
aws-sdk-iam = "1.13.0"
aws-sdk-sts = "1.13.0"
chrono = "0.4.33"
tokio = { version = "1.36.0", features = ["full"] }
